"""
PolyCubeClass
Class to deal with PolyCube mesh method in GeoHexMesher
"""

class PolyCubeClass:
    ## PolyCubeClass.
    # Class build polycube and generate mapping transform 
    def __init__(self):
        ## The constructor.
        pass

    def GetIntefepectElements(self,stl):
    ## Here it forms the polycube
    #  @param stl something.
	    return

    def MakeTetMesh(self,stl):
    ## here we build the tetmesh and add label to the surfaces
    #  @param stl something.
	    return

    def MapMesh(self,stl):
    ## evaluate the minimisation of the energy
    #  @param stl something.
	    return
